eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
/**
 *
 *
 *
 * - THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY -
 * - Generated by Gulp (gulp-sass).
 *
 *
 *
 *
 */


.eaton-landing-hero { position: relative; /* &__image { position: relative; img { width: 100%; min-height: 1285px; @include media-tablet-and-up { min-height: 668px; } } } */ }

.eaton-landing-hero__slide-list { padding: 0; }

.eaton-landing-hero__slide-item, .eaton-landing-hero__content .container { position: relative; }

.eaton-landing-hero__content { color: #FFF; position: absolute; left: 0; right: 0; text-align: center; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); z-index: 5; }

.eaton-landing-hero__cta { margin-top: 30px; }

.eaton-landing-hero__image { position: absolute; left: 0; top: 0; height: 100%; width: 100%; }

.image-mask .eaton-landing-hero__image::before { position: absolute; left: 0; top: 0; height: 100%; width: 100%; background-image: -webkit-gradient(linear, left bottom, left top, color-stop(15%, rgba(0, 0, 0, 0.75)), to(transparent)); background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 15%, transparent 100%); content: ''; z-index: 2; }

.eaton-landing-hero__text { margin-top: 20px; }

.eaton-landing-hero__title { margin: 0; }

.eaton-landing-hero__separator { width: 5%; height: 2px; background: #FFF; margin: 20px auto; }

.eaton-landing-hero__arrow { display: none !important; position: absolute; top: 45%; }

.eaton-landing-hero__arrow .icon { font-size: 6rem; color: #CCD2D7; }

.eaton-landing-hero__arrow--next { right: 80px; }

.eaton-landing-hero__arrow--prev { left: 80px; }

.eaton-landing-hero__dots { position: absolute; bottom: 70px; left: 50%; width: 60%; padding-left: 0; margin-left: -30%; }

@media screen and (min-width: 768px) { .eaton-landing-hero__dots { bottom: 20px; } }

.eaton-landing-hero__dots:only-child { display: none; }

.eaton-landing-hero__dots button { background-color: #EEF0F2; height: 10px; width: 10px; border: 10px; line-height: 0; display: inline; padding: 5px; cursor: pointer; color: transparent; border-radius: 10px; }

.eaton-landing-hero__down-arrow { position: absolute; bottom: 25px; color: #FFF; width: 100%; font-size: 1.5em; z-index: 10; text-align: center; }

.eaton-landing-hero .slick-active button { background-color: #005EB8; border: 1px solid #005EB8; }

@media screen and (max-width: 991px) { .eaton-landing-hero { height: 169.06667vw; }
  .eaton-landing-hero__slide-item { height: 169.06667vw; }
  .eaton-landing-hero__caption { padding: 0; }
  .eaton-landing-hero__separator { display: none; } }

@media screen and (min-width: 992px) { .eaton-landing-hero { height: 56.25vw; }
  .eaton-landing-hero__slide-item { height: 56.25vw; }
  .eaton-landing-hero__caption { padding: 0 100px; } }

@media screen and (min-width: 1200px) { .eaton-landing-hero:hover .eaton-landing-hero__arrow { display: block !important; }
  .eaton-landing-hero__slide-list__cta { margin-top: 60px; } }

/*
.eaton-landing-hero--single {

  .eaton-landing-hero__slide {

    &__caption {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      bottom: auto;
    }

    &__separator {
      width: 5%;
      height: 2px;
      background: $color__white;
      margin: 20px auto;
    }
  }



}
*/
.featured-story-component .rendition__image { width: 100%; }

.featured-story-component__content { padding: 60px 50px; }

.featured-story-component__text { color: #FFF; padding-top: 30px; }

.featured-story-component__row--nopadding { padding: 0; }

.featured-story-component__arrow::before { font-size: 0.7em; left: 10px; }

.featured-story-component__title { color: #FFF; }

.featured-story-component__link:hover, .featured-story-component__link:active, .featured-story-component__link:focus { text-decoration: none; color: #FFF; }

.featured-story-component__link h2.featured-story-component__text::after { color: #FFF; margin-left: 20px; content: "\e258"; font-family: 'Glyphicons Halflings'; font-style: normal; font-weight: normal; font-size: 2.4rem; }

.featured-story-component__blue { position: absolute; top: 0; height: 100%; background-color: rgba(0, 94, 184, 0.8); color: #FFF; padding: 0; }

.featured-story-component__blue--right { right: 0; }

.featured-story-component__blue--left { left: 0; }

@media screen and (max-width: 767px) { .featured-story-component__blue { position: relative; }
  .featured-story-component__content { padding: 30px 40px; }
  .featured-story-component__row { padding-bottom: 20px; } }

@media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; width: 250px; }
  .featured-story-component__content { padding: 60px 30px 60px 50px; } }

.tile-link-component { margin-top: 60px; margin-bottom: 0; }

@media screen and (min-width: 768px) { .tile-link-component__container { padding: 0 15px; } }

.tile-link-component__copy { padding: 60px 0; }

.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 60px; height: 240px; position: relative; padding: 0; }

.tile-link-component__element:hover, .tile-link-component__element:active, .tile-link-component__element:focus { color: #FFF; text-decoration: none; }

.tile-link-component__element--0 { background-color: #005EB8; margin-left: 0; }

.tile-link-component__element--1 { background-color: #5B6770; }

.tile-link-component__element--2 { background-color: #00B2A9; }

.tile-link-component__element--3 { background-color: #ED8B00; margin-left: 0; }

.tile-link-component__element--4 { background-color: #005EB8; }

.tile-link-component__element--5 { background-color: #333F48; }

.tile-link-component__icon { position: absolute; width: 72px; bottom: 80px; color: #FFF; left: 30px; }

.tile-link-component__image { width: 100%; }

.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 30px 25px; font-size: 2.8rem; }

@media screen and (max-width: 479px) { .tile-link-component__title { width: 86vw; } }
/* ... */

